[package]
name = "change-case"
repository = "https://github.com/skubalj/change-case"
version = "1.0.0"
authors = ["Joseph Skubal"]
license = "GPL-3.0-or-later"
readme = "README.md"
description = "Command line identifier case conversions"
edition = "2024"

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
